IT WORKS! 0.04ns evaluation time per element due to SIMD. WOW! all in pure JAVA