@@ -9,41 +9,110 @@ import jdk.incubator.vector.*;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
-import java.util.ArrayList;
-import java.util.List;
 import java.util.Random;
-import java.util.Stack;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
 
+/**
+ * Enterprise SIMD Evaluator for ParserNG. Compiles a parallel Vector
+ * MethodHandle tree for high-throughput block execution.
+ *
+ * REQUIRES JVM FLAG: --add-modules jdk.incubator.vector
+ *
+ * @author GBEMIRO
+ */
 public class VectorTurboEvaluator extends ScalarTurboEvaluator1 {
 
     private static final VectorSpecies<Double> SPECIES = DoubleVector.SPECIES_PREFERRED;
     private static final MethodHandles.Lookup LOOKUP = MethodHandles.lookup();
     private static final int VLEN = SPECIES.length();
-    private static final ThreadLocal<double[]> SCALAR_FRAME = ThreadLocal.withInitial(() -> new double[32]);
-    private static final ThreadLocal<Future<?>[]> FUTURES_CACHE = ThreadLocal.withInitial(() -> new Future<?>[64]);
+
+    private static final int OP_CONST = 1;
+    private static final int OP_LOAD = 2;
+    private static final int OP_ADD = 3;
+    private static final int OP_SUB = 4;
+    private static final int OP_MUL = 5;
+    private static final int OP_DIV = 6;
+    private static final int OP_POW = 7;
+    private static final int OP_SIN = 8;
+    private static final int OP_COS = 9;
+    private static final int OP_EXP = 10;
+    private static final int OP_SQRT = 11;
+    private static final int OP_LOG = 12;
+    private static final int OP_VMA = 13;
+    private static final int OP_REM = 14;
+
+    private static final ThreadLocal<double[]> SCALAR_FRAME = ThreadLocal.withInitial(() -> new double[0]);
+    private static final ThreadLocal<Future<?>[]> FUTURES_CACHE = ThreadLocal.withInitial(() -> new Future[0]);
     private static final ThreadLocal<MathExpression.EvalResult> RESULT_CACHE = ThreadLocal.withInitial(MathExpression.EvalResult::new);
-    private static final ThreadLocal<double[]> VECTOR_REGISTER_BANK = ThreadLocal.withInitial(() -> new double[1024]);
-    
+
     private final MathExpression.Token[] postfix;
+    private int[] opcodes;
+    private int[] targetSlots;
+    private double[] literalConstants;
+    private int instructionCount;
     private KernelInterceptException interceptedKernel;
 
     public VectorTurboEvaluator(MathExpression me) {
         super(me);
         this.postfix = me.getCachedPostfix();
+        compileToPrimitiveProgram();
+    }
+
+    private void compileToPrimitiveProgram() {
+        int len = postfix.length;
+        this.opcodes = new int[len];
+        this.targetSlots = new int[len];
+        this.literalConstants = new double[len];
+        this.instructionCount = 0;
+
+        for (MathExpression.Token t : postfix) {
+            switch (t.kind) {
+                case MathExpression.Token.NUMBER -> {
+                    opcodes[instructionCount] = OP_CONST;
+                    literalConstants[instructionCount] = t.value;
+                    instructionCount++;
+                }
+                case MathExpression.Token.VARIABLE -> {
+                    opcodes[instructionCount] = OP_LOAD;
+                    targetSlots[instructionCount] = resolveSlotIndex(t.frameIndex);
+                    instructionCount++;
+                }
+                case MathExpression.Token.OPERATOR -> {
+                    opcodes[instructionCount] = switch (t.opChar) {
+                        case '+' -> OP_ADD;
+                        case '-' -> OP_SUB;
+                        case '*' -> OP_MUL;
+                        case '/' -> OP_DIV;
+                        case '^' -> OP_POW;
+                        case '%' -> OP_REM;
+                        default -> throw new IllegalArgumentException("Unknown operator: " + t.opChar);
+                    };
+                    instructionCount++;
+                }
+                case MathExpression.Token.FUNCTION, MathExpression.Token.METHOD -> {
+                    if (isMatrixKernel(t.name, t.arity)) {
+                        interceptedKernel = new KernelInterceptException(t.name, t.arity);
+                        return;
+                    }
+                    opcodes[instructionCount] = switch (t.name.toLowerCase()) {
+                        case "sin" -> OP_SIN;
+                        case "cos" -> OP_COS;
+                        case "exp" -> OP_EXP;
+                        case "sqrt" -> OP_SQRT;
+                        case "log" -> OP_LOG;
+                        case "vma" -> OP_VMA;
+                        default -> throw new IllegalArgumentException("Unknown function: " + t.name);
+                    };
+                    instructionCount++;
+                }
+            }
+        }
     }
 
     @Override
     public FastCompositeExpression compile() throws Throwable {
         final MethodHandle rawScalarHandle = super.compileScalar(this.postfix);
-        MethodHandle vectorTreeHandle = null;
-        try {
-            vectorTreeHandle = compileVectorTree(this.postfix);
-        } catch (KernelInterceptException ex) {
-            this.interceptedKernel = ex;
-        }
+        MethodHandle vectorTreeHandle = compileVectorTree();
         final MethodHandle finalVectorHandle = vectorTreeHandle;
 
         return new SIMDCompositeExpression() {
@@ -82,14 +151,12 @@ public class VectorTurboEvaluator extends ScalarTurboEvaluator1 {
             }
 
             private void applyBulkInternal(double[][] variables, double[] output, int offset) {
-                final int length = variables[0].length;
+                final int length = variables.length;
                 if (length == 0) return;
-                
                 if (interceptedKernel != null || length < VLEN || finalVectorHandle == null) {
                     scalarBulk(variables, output, offset, length);
                     return;
                 }
-                
                 final int loopBound = SPECIES.loopBound(length);
                 int i = 0;
                 try {
@@ -120,20 +187,18 @@ public class VectorTurboEvaluator extends ScalarTurboEvaluator1 {
             }
 
             @Override
-            public void applyBulk(double[][] variables, double[] output, ExecutorService executor) {
+            public void applyBulk(double[][] variables, double[] output, java.util.concurrent.ExecutorService executor) {
                 final int length = output.length;
                 if (executor == null || length < 25_000 || finalVectorHandle == null) {
                     applyBulkInternal(variables, output, 0);
                     return;
                 }
-                
                 final int nThreads = Math.min(Runtime.getRuntime().availableProcessors(), Math.max(1, length / 25_000));
                 Future<?>[] futures = FUTURES_CACHE.get();
                 if (futures.length < nThreads) {
-                    futures = new Future<?>[nThreads];
+                    futures = new Future[nThreads];
                     FUTURES_CACHE.set(futures);
                 }
-                
                 final int chunk = (length + nThreads - 1) / nThreads;
                 for (int t = 0; t < nThreads; t++) {
                     final int start = t * chunk;
@@ -163,185 +228,79 @@ public class VectorTurboEvaluator extends ScalarTurboEvaluator1 {
                 }
             }
 
-            @Override
-            public void applyMatrixKernel(FlatMatrix[] inputs, FlatMatrix output, String op) {}
+  
+            public void applyMatrixKernel(Object[] inputs, Object output, String op) {
+                // Implementation pending
+            }
         };
     }
 
-    private MethodHandle compileVectorTree(MathExpression.Token[] postfix) throws Throwable {
-        Stack<Integer> registerStack = new Stack<>();
-        List<MethodHandle> handles = new ArrayList<>();
-        int regCounter = 0;
-        
-        for (MathExpression.Token t : postfix) {
-            switch (t.kind) {
-                case MathExpression.Token.NUMBER: {
-                    int destReg = regCounter++;
-                    MethodHandle h = LOOKUP.findStatic(VectorTurboEvaluator.class, "execConst", 
-                        MethodType.methodType(void.class, double.class, int.class, double[][].class, int.class, double[].class, int.class));
-                    h = MethodHandles.insertArguments(h, 0, t.value, destReg);
-                    handles.add(h);
-                    registerStack.push(destReg);
-                    break;
+    private MethodHandle compileVectorTree() throws Throwable {
+        MethodHandle h = LOOKUP.findStatic(VectorTurboEvaluator.class, "execFusedVectorProgram",
+                MethodType.methodType(void.class, int[].class, int[].class, double[].class, int.class, double[][].class, int.class, double[].class, int.class));
+        return MethodHandles.insertArguments(h, 0, this.opcodes, this.targetSlots, this.literalConstants, this.instructionCount);
+    }
+
+    public static void execFusedVectorProgram(int[] opcodes, int[] targetSlots, double[] literalConstants, int instructionCount,
+                                              double[][] vars, int off, double[] out, int outOff) {
+        DoubleVector[] registers = new DoubleVector[instructionCount + 2];
+        int sp = 0;
+        for (int idx = 0; idx < instructionCount; idx++) {
+            int opcode = opcodes[idx];
+            switch (opcode) {
+                case OP_CONST -> registers[sp++] = DoubleVector.broadcast(SPECIES, literalConstants[idx]);
+                case OP_LOAD -> registers[sp++] = DoubleVector.fromArray(SPECIES, vars[targetSlots[idx]], off);
+                case OP_ADD -> {
+                    DoubleVector r = registers[--sp];
+                    DoubleVector l = registers[--sp];
+                    registers[sp++] = l.add(r);
                 }
-                case MathExpression.Token.VARIABLE: {
-                    int destReg = regCounter++;
-                    int slot = resolveSlotIndex(t.frameIndex);
-                    MethodHandle h = LOOKUP.findStatic(VectorTurboEvaluator.class, "execLoad", 
-                        MethodType.methodType(void.class, int.class, int.class, double[][].class, int.class, double[].class, int.class));
-                    h = MethodHandles.insertArguments(h, 0, slot, destReg);
-                    handles.add(h);
-                    registerStack.push(destReg);
-                    break;
+                case OP_SUB -> {
+                    DoubleVector r = registers[--sp];
+                    DoubleVector l = registers[--sp];
+                    registers[sp++] = l.sub(r);
                 }
-                case MathExpression.Token.OPERATOR: {
-                    int rReg = registerStack.pop();
-                    int lReg = registerStack.pop();
-                    int destReg = regCounter++;
-                    String opMethod = switch (t.opChar) {
-                        case '+' -> "execAdd";
-                        case '-' -> "execSub";
-                        case '*' -> "execMul";
-                        case '/' -> "execDiv";
-                        case '^' -> "execPow";
-                        case '%' -> "execRem";
-                        default -> throw new UnsupportedOperationException();
-                    };
-                    MethodHandle h = LOOKUP.findStatic(VectorTurboEvaluator.class, opMethod, 
-                        MethodType.methodType(void.class, int.class, int.class, int.class, double[][].class, int.class, double[].class, int.class));
-                    h = MethodHandles.insertArguments(h, 0, lReg, rReg, destReg);
-                    handles.add(h);
-                    registerStack.push(destReg);
-                    break;
+                case OP_MUL -> {
+                    DoubleVector r = registers[--sp];
+                    DoubleVector l = registers[--sp];
+                    registers[sp++] = l.mul(r);
                 }
-                case MathExpression.Token.FUNCTION:
-                case MathExpression.Token.METHOD: {
-                    if (isMatrixKernel(t.name, t.arity)) {
-                        throw new KernelInterceptException(t.name, t.arity);
-                    }
-                    if (t.arity == 1) {
-                        int srcReg = registerStack.pop();
-                        int destReg = regCounter++;
-                        String unMethod = switch (t.name.toLowerCase()) {
-                            case "sin" -> "execSin";
-                            case "cos" -> "execCos";
-                            case "exp" -> "execExp";
-                            case "sqrt" -> "execSqrt";
-                            case "log" -> "execLog";
-                            default -> throw new UnsupportedOperationException(t.name);
-                        };
-                        MethodHandle h = LOOKUP.findStatic(VectorTurboEvaluator.class, unMethod, 
-                            MethodType.methodType(void.class, int.class, int.class, double[][].class, int.class, double[].class, int.class));
-                        h = MethodHandles.insertArguments(h, 0, srcReg, destReg);
-                        handles.add(h);
-                        registerStack.push(destReg);
-                    } else if (t.arity == 3 && "vma".equalsIgnoreCase(t.name)) {
-                        int cReg = registerStack.pop();
-                        int bReg = registerStack.pop();
-                        int aReg = registerStack.pop();
-                        int destReg = regCounter++;
-                        MethodHandle h = LOOKUP.findStatic(VectorTurboEvaluator.class, "execVma", 
-                            MethodType.methodType(void.class, int.class, int.class, int.class, int.class, double[][].class, int.class, double[].class, int.class));
-                        h = MethodHandles.insertArguments(h, 0, aReg, bReg, cReg, destReg);
-                        handles.add(h);
-                        registerStack.push(destReg);
-                    }
-                    break;
+                case OP_DIV -> {
+                    DoubleVector r = registers[--sp];
+                    DoubleVector l = registers[--sp];
+                    registers[sp++] = l.div(r);
+                }
+                case OP_POW -> {
+                    DoubleVector r = registers[--sp];
+                    DoubleVector l = registers[--sp];
+                    registers[sp++] = l.lanewise(VectorOperators.POW, r);
+                }
+                case OP_SIN -> registers[sp - 1] = registers[sp - 1].lanewise(VectorOperators.SIN);
+                case OP_COS -> registers[sp - 1] = registers[sp - 1].lanewise(VectorOperators.COS);
+                case OP_EXP -> registers[sp - 1] = registers[sp - 1].lanewise(VectorOperators.EXP);
+                case OP_SQRT -> registers[sp - 1] = registers[sp - 1].lanewise(VectorOperators.SQRT);
+                case OP_LOG -> registers[sp - 1] = registers[sp - 1].lanewise(VectorOperators.LOG);
+                case OP_VMA -> {
+                    DoubleVector c = registers[--sp];
+                    DoubleVector b = registers[--sp];
+                    DoubleVector a = registers[--sp];
+                    registers[sp++] = a.fma(b, c);
+                }
+                case OP_REM -> {
+                    DoubleVector b = registers[--sp];
+                    DoubleVector a = registers[--sp];
+                    DoubleVector q = a.div(b);
+                    LongVector t = (LongVector) q.convert(VectorOperators.Conversion.ofCast(double.class, long.class), 0);
+                    DoubleVector td = (DoubleVector) t.convert(VectorOperators.Conversion.ofCast(long.class, double.class), 0);
+                    registers[sp++] = a.sub(td.mul(b));
                 }
             }
         }
-        int finalReg = registerStack.pop();
-        MethodHandle store = LOOKUP.findStatic(VectorTurboEvaluator.class, "execStore", 
-            MethodType.methodType(void.class, int.class, double[][].class, int.class, double[].class, int.class));
-        store = MethodHandles.insertArguments(store, 0, finalReg);
-        handles.add(store);
-        
-        MethodHandle finalTree = handles.get(0);
-        for (int i = 1; i < handles.size(); i++) {
-            finalTree = MethodHandles.foldArguments(handles.get(i), finalTree);
-        }
-        return finalTree;
-    }
-
-    // Static helper methods for MethodHandles
-    public static void execConst(double val, int dest, double[][] vars, int off, double[] out, int outOff) {
-        DoubleVector.broadcast(SPECIES, val).intoArray(VECTOR_REGISTER_BANK.get(), dest * VLEN);
-    }
-
-    public static void execLoad(int slot, int dest, double[][] vars, int off, double[] out, int outOff) {
-        DoubleVector.fromArray(SPECIES, vars[slot], off).intoArray(VECTOR_REGISTER_BANK.get(), dest * VLEN);
-    }
-
-    public static void execAdd(int srcL, int srcR, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, srcL * VLEN).add(DoubleVector.fromArray(SPECIES, r, srcR * VLEN)).intoArray(r, dest * VLEN);
-    }
-
-    public static void execSub(int srcL, int srcR, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, srcL * VLEN).sub(DoubleVector.fromArray(SPECIES, r, srcR * VLEN)).intoArray(r, dest * VLEN);
-    }
-
-    public static void execMul(int srcL, int srcR, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, srcL * VLEN).mul(DoubleVector.fromArray(SPECIES, r, srcR * VLEN)).intoArray(r, dest * VLEN);
-    }
-
-    public static void execDiv(int srcL, int srcR, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, srcL * VLEN).div(DoubleVector.fromArray(SPECIES, r, srcR * VLEN)).intoArray(r, dest * VLEN);
-    }
-
-    public static void execPow(int srcL, int srcR, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, srcL * VLEN).lanewise(VectorOperators.POW, DoubleVector.fromArray(SPECIES, r, srcR * VLEN)).intoArray(r, dest * VLEN);
-    }
-
-    public static void execSin(int src, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, src * VLEN).lanewise(VectorOperators.SIN).intoArray(r, dest * VLEN);
-    }
-
-    public static void execCos(int src, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, src * VLEN).lanewise(VectorOperators.COS).intoArray(r, dest * VLEN);
-    }
-
-    public static void execExp(int src, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, src * VLEN).lanewise(VectorOperators.EXP).intoArray(r, dest * VLEN);
-    }
-
-    public static void execSqrt(int src, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, src * VLEN).lanewise(VectorOperators.SQRT).intoArray(r, dest * VLEN);
-    }
-
-    public static void execLog(int src, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, src * VLEN).lanewise(VectorOperators.LOG).intoArray(r, dest * VLEN);
-    }
-
-    public static void execRem(int srcL, int srcR, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector a = DoubleVector.fromArray(SPECIES, r, srcL * VLEN);
-        DoubleVector b = DoubleVector.fromArray(SPECIES, r, srcR * VLEN);
-        DoubleVector q = a.div(b);
-        LongVector t = (LongVector) q.convert(VectorOperators.Conversion.ofCast(double.class, long.class), 0);
-        DoubleVector td = (DoubleVector) t.convert(VectorOperators.Conversion.ofCast(long.class, double.class), 0);
-        a.sub(td.mul(b)).intoArray(r, dest * VLEN);
-    }
-
-    public static void execVma(int srcA, int srcB, int srcC, int dest, double[][] vars, int off, double[] out, int outOff) {
-        double[] r = VECTOR_REGISTER_BANK.get();
-        DoubleVector.fromArray(SPECIES, r, srcA * VLEN).fma(DoubleVector.fromArray(SPECIES, r, srcB * VLEN), DoubleVector.fromArray(SPECIES, r, srcC * VLEN)).intoArray(r, dest * VLEN);
-    }
-
-    public static void execStore(int srcReg, double[][] vars, int off, double[] out, int outOff) {
-        DoubleVector.fromArray(SPECIES, VECTOR_REGISTER_BANK.get(), srcReg * VLEN).intoArray(out, outOff);
+        registers[--sp].intoArray(out, outOff);
     }
 
     private int resolveSlotIndex(int tokenIndex) {
+        // Assuming 'slots' is provided by the superclass
         if (slots != null) {
             for (int k = 0; k < slots.length; k++) {
                 if (slots[k] == tokenIndex) return k;
@@ -354,7 +313,7 @@ public class VectorTurboEvaluator extends ScalarTurboEvaluator1 {
         return false;
     }
     
-       public static void main(String[] args) {
+    public static void main(String[] args) {
         int dataSize = 50000;
              // Structure of Arrays (SoA): 3 variables (x1, x2, x3), each of length dataSize
        double[][] variables = new double[3][dataSize];
